# Clinical_SOAP_Note_Agent

./: .gitignore  Dockerfile  LICENSE  README.md  THREAT_MODEL.md  agent.py  bash  coverage.py  docker-compose.yml  guardrails.py  pyproject.toml  requirements-dev.txt  requirements.txt  retriever.py  schema.py  schema_granular.py  transcribe.py
.github/workflows/: ci.yml  eval.yml
data/: knowledge_base.py  synthetic.py
evals/: REAL_DATA_README.md  error_analysis.py  harness.py  real_data_eval.py  report.json  report.md  validate_judge.py
scripts/: coverage_demo.py  demo.py  evidence_demo.py  groundedness.py  run_eval.py
soap_agent/: api.py  evidence_clarification.py  extractor.py
tests/: test_coverage.py  test_pipeline.py  test_retrieval.py
